--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PhotoCache</string>
+    <string name="error_message">오류가 발생 했어요.\n다시 시도해 주시겠어요?</string>
+    <string name="empty_message">불러올 사진이 없어요</string>
 </resources>
