#9 [mod] : 전체 스낵바 메세지 에러 핸들링 로직 수정, 사용자에게 불필요한 메세지 감춤

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">PhotoCache</string>
+    <!-- error -->
     <string name="error_message">오류가 발생 했어요.\n다시 시도해 주시겠어요?</string>
+    <string name="error_message_unknown">알 수 없는 오류가 발생하였습니다</string>
+    <!-- empty -->
     <string name="empty_message">불러올 사진이 없어요</string>
 </resources>
