--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="error_message_unknown">알 수 없는 오류가 발생하였습니다</string>
     <!-- empty -->
     <string name="empty_message">불러올 사진이 없어요</string>
+    <!-- button -->
+    <string name="btn_default">Default</string>
+    <string name="btn_gray">Gray</string>
+    <string name="btn_blur">Blur</string>
+    <string name="btn_retry">retry</string>
 </resources>
